adds read existing survey

--- a/Content Builder/sfmc_vuejs_progressive_survey/frontend/components/legal.html
+++ b/Content Builder/sfmc_vuejs_progressive_survey/frontend/components/legal.html
@@ -3,8 +3,8 @@
 */
 Vue.component('legal', {
 props: {
-legal: Object,
-branding: Object
+  legal: Object,
+  branding: Object
 },
 template: `
 <v-row class="mt-5 mx-auto">
@@ -20,6 +20,8 @@ template: `
         <v-btn
           elevation="2"
           plain
+          href="https://github.com/basetime/sfmc_vuejs_progressive_survey"
+          target="_blank"
         >View CloudPage Survey Code</v-btn>
       </v-col>
     </v-row>
